texto.txt
F:\Documentos\Desenvolvimento\BelaFarma\backend\database.js:180
    const createDailyRecordsTable = `
          ^

SyntaxError: Identifier 'createDailyRecordsTable' has already been declared
    at internalCompileFunction (node:internal/vm:77:18)
    at wrapSafe (node:internal/modules/cjs/loader:1288:20)
    at Module._compile (node:internal/modules/cjs/loader:1340:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1435:10)
    at Module.load (node:internal/modules/cjs/loader:1207:32)
    at Module._load (node:internal/modules/cjs/loader:1023:12)
    at Module.require (node:internal/modules/cjs/loader:1235:19)
    at require (node:internal/modules/helpers:176:18)
    at Object.<anonymous> (F:\Documentos\Desenvolvimento\BelaFarma\backend\server.js:3:12)
    at Module._compile (node:internal/modules/cjs/loader:1376:14)

Node.js v20.10.0
[nodemon] app crashed - waiting for file changes before starting...